# mc-scanner

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
go/: go.mod  go.sum  main.go
mc-server-stats/: Cargo.toml
mc-server-stats/src/: extra_colored.rs  info_getter.rs  lib.rs
rust/: Cargo.toml
rust/src/: info_getter.rs  main.rs  utils.rs
src/: extra_colored.rs  info_getter.rs  main.rs
